--- a/index.html
+++ b/index.html
@@ -29,5 +29,21 @@
       </ul>
     </div>
   </nav>
+
+    <!-- Showcase -->
+    <header id="showcase">
+      <div class="container">
+        <div class="showcase-container">
+          <div class="showcase-content">
+            <div class="category category-sports">Sports</div>
+            <h1>Some Sports Article</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur esse alias officiis ab soluta et? Blanditiis ratione rerum numquam at recusandae voluptatibus et, reiciendis repudiandae dolor dolores dolore laudantium labore!</p>
+            <a href="article.html" class="btn btn-primary">Read More</a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+  
 </body>
 </html>
