--- a/index.html
+++ b/index.html
@@ -44,6 +44,72 @@
       </div>
     </header>
 
+    <!-- Home Articles -->
+    <section id="home-aritcles" class="py-2">
+      <div class="container">
+        <h2>Editors Picks</h2>
+        <div class="articles-container">
+          <article class="card">
+          <img src="img/articles/ent1.jpg" alt="">
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3>
+                <a href="aricle.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo magnam illo sit dolore amet quo in quis quaerat vero neque?</p>
+            </div>
+          </article>
+          <article class="card bg-dark">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="aricle.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo magnam illo sit dolore amet quo in quis quaerat vero neque?</p>
+          </article>
+          <article class="card">
+            <img src="img/articles/tech1.jpg" alt="">
+            <div class="category category-tech">Technology</div>
+            <h3>
+              <a href="aricle.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo magnam illo sit dolore amet quo in quis quaerat vero neque?</p>
+          </article>
+          <article class="card">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="aricle.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo magnam illo sit dolore amet quo in quis quaerat vero neque?</p>
+            <img src="img/articles/sports1.jpg" alt="">
+          </article>
+          <article class="card">
+            <img src="img/articles/tech2.jpg" alt="">
+            <div class="category category-tech">Technology</div>
+            <h3>
+              <a href="aricle.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo magnam illo sit dolore amet quo in quis quaerat vero neque?</p>
+          </article>
+          <article class="card bg-primary">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="aricle.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo magnam illo sit dolore amet quo in quis quaerat vero neque?</p>
+          </article>
+          <article class="card">
+              <div>
+                <div class="category category-ent">Entertainment</div>
+                <h3>
+                  <a href="aricle.html">Lorem ipsum dolor sit amet.</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo magnam illo sit dolore amet quo in quis quaerat vero neque?</p>
+              </div>
+              <img src="img/articles/ent2.jpg" alt="">
+            </article>
+        </div>
+      </div>
+    </section>
   
 </body>
 </html>
