--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="category category-sports">Sports</div>
             <h1>Some Sports Article</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur esse alias officiis ab soluta et? Blanditiis ratione rerum numquam at recusandae voluptatibus et, reiciendis repudiandae dolor dolores dolore laudantium labore!</p>
+            <!-- <a href="article.html" class="btn btn-primary">Read More</a> -->
             <a href="article.html" class="btn btn-primary">Read More</a>
           </div>
         </div>
